[gd_scene load_steps=7 format=3 uid="uid://bknffommb3er4"]

[ext_resource type="Script" path="res://ui/widgets/health_comp_ui.gd" id="1_qitsd"]
[ext_resource type="LabelSettings" uid="uid://bpr6t2q1y56ln" path="res://ui/themes/label_settings/info_label_settings.tres" id="2_fqyxe"]
[ext_resource type="Texture2D" uid="uid://l8y2l834aish" path="res://ui/action_icons/shield.png" id="3_7ixli"]
[ext_resource type="PackedScene" uid="uid://xikuimul3exk" path="res://ui/widgets/action_ui.tscn" id="3_yv6fk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y71ew"]
bg_color = Color(0.266575, 0.266575, 0.266575, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vp78b"]
bg_color = Color(0.67, 0.1742, 0.1742, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HealthComp" type="MarginContainer"]
offset_right = 120.0
offset_bottom = 32.0
script = ExtResource("1_qitsd")

[node name="Container2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Container2"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Container2/MarginContainer"]
layout_mode = 2

[node name="Container" type="MarginContainer" parent="Container2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HealthProgressBar" type="ProgressBar" parent="Container2/MarginContainer/HBoxContainer/Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_y71ew")
theme_override_styles/fill = SubResource("StyleBoxFlat_vp78b")
show_percentage = false

[node name="HealthLabel" type="Label" parent="Container2/MarginContainer/HBoxContainer/Container/HealthProgressBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -11.5
offset_right = 50.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "10/10"
label_settings = ExtResource("2_fqyxe")
horizontal_alignment = 1
vertical_alignment = 1

[node name="shields" parent="Container2/MarginContainer/HBoxContainer" instance=ExtResource("3_yv6fk")]
unique_name_in_owner = true
visible = false
layout_mode = 2
default_texture = ExtResource("3_7ixli")

[node name="MarginContainer3" type="MarginContainer" parent="Container2"]
layout_mode = 2
theme_override_constants/margin_top = -10

[node name="MarginContainer2" type="HBoxContainer" parent="Container2/MarginContainer3"]
layout_mode = 2

[node name="ActionUi" parent="Container2/MarginContainer3/MarginContainer2" instance=ExtResource("3_yv6fk")]
unique_name_in_owner = true
visible = false
layout_mode = 2
